Updating Clipper tutorial

--- a/examples/tutorial/tutorial_part_one.ipynb
+++ b/examples/tutorial/tutorial_part_one.ipynb
@@ -17,8 +17,9 @@
     "\n",
     "## Download the images\n",
     "\n",
-    "As the first step in the tutorial, download the CIFAR dataset using the provided [`download_cifar.py`](download_cifar.py) script and set the dataset location.\n",
-    "\n"
+    "As the first step in the tutorial, download the CIFAR dataset that your Clipper application will work with. You can do this by specifying a download location, `cifar_loc`, and running the below code. This will make use of the provided [`download_cifar.py`](download_cifar.py).\n",
+    "\n",
+    ">*This download can take some time. If it fails before you see the output \"Finished downloading\", go to the download location you specified, delete `cifar-10-python.tar.gz`, and attempt the download again.*"
    ]
   },
   {
@@ -29,8 +30,37 @@
    },
    "outputs": [],
    "source": [
-    "cifar_loc = \"/Users/crankshaw/test/path/\"\n",
+    "cifar_loc = \"\"\n",
     "%run ./download_cifar.py $cifar_loc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extract the images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we must extract the data into a format we can load. This will make use of the provided [`extract_cifar.py`](extract_cifar.py)\n",
+    "\n",
+    "This dataset has 50,000 training datapoints and 10,000 test datapoints. We don't need to use all of them to demonstrate how Clipper works. Feel free to adjust `max_train_datapoints` and `max_test_datapoints` or set them to `None` if you wish to use all the data available for training and testing. You can change these vaues and re-run this command in the future if you wish."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "max_train_datapoints = 10000\n",
+    "max_test_datapoints = 10000\n",
+    "%run ./extract_cifar.py $cifar_loc $max_train_datapoints $max_test_datapoints"
    ]
   },
   {
@@ -39,7 +69,7 @@
    "source": [
     "# Load Cifar\n",
     "\n",
-    "The first step in building any application, using machine-learning or otherwise, is to understand the application requirements. Load the dataset into the notebook so you can examine it and better understand the dataset you will be working with. To make this easier, the `cifar_utils` library is a library of little utilities for working with CIFAR data."
+    "The first step in building any application, using machine-learning or otherwise, is to understand the application requirements. Load the dataset into the notebook so you can examine it and better understand the dataset you will be working with. The `cifar_utils` library provides several utilities for working with CIFAR data – we will make use of one of them here."
    ]
   },
   {
@@ -68,7 +98,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -91,16 +121,20 @@
     "\n",
     "Now you're ready to start Clipper! You will be using the `clipper_manager` client library to perform admninistrative commands.\n",
     "\n",
-    "If you'd like to deploy Clipper locally, you can leave the `user` and `key` variables blank and set `host=\"local\"`. Otherwise, you can deploy Clipper remotely to a machine that you have SSH access to. Set the `user` variable to your SSH username, the `key` variable to the path to your SSH key, and the `host` variable to the remote hostname or IP address.\n",
+    "> *Remember, Docker and Docker-Compose must be installed to before deploying Clipper. Visit https://docs.docker.com/compose/install/ for instructions on how to do so.*\n",
     "\n",
-    "*Remember, Docker and Docker-Compose must be installed to before deploying Clipper.*"
+    "Clipper uses Docker to manage application configurations and to deploy machine-learning models. Make sure your Docker daemon, local or remote, is up and running. You can check this by running `docker ps` in your command line – if your Docker daemon is not running, you will be told explicitly.\n",
+    "\n",
+    "Starting clipper will have the following effect on your setup:  <img src=\"img/start_clipper.png\" style=\"width: 500px;\"/>\n",
+    "\n",
+    "If you'd like to deploy Clipper locally, you can leave the `user` and `key` variables blank and set `host=\"localhost\"`. Otherwise, you can deploy Clipper remotely to a machine that you have SSH access to. Set the `user` variable to your SSH username, the `key` variable to the path to your SSH key, and the `host` variable to the remote hostname or IP address."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -127,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Congratulations! You now have a running Clipper instance that you can start to interact with. Try listing the applications deployed to this Clipper instance:"
+    "Congratulations! You now have a running Clipper instance that you can start to interact with. Think of your `clipper` Python object as a vehicle for that interaction. Try using it to list the applications deployed to this Clipper instance:"
    ]
   },
   {
@@ -159,6 +193,8 @@
     "By associating the query interface with a specific application, Clipper allows frontend developers the flexibility to have multiple applications running in the same Clipper instance. Applications can request predictions from any model in Clipper. This allows a single Clipper instance to serve multiple machine-learning applications. It also provides a convenient mechanism for beta-testing or incremental rollout by creating experimental and stable applications for the same set of queries.\n",
     "\n",
     "For this tutorial, you will create an application named \"cifar_demo\" and register two candidate models. Note that Clipper allows you to create the application before deploying the models. Clipper will be moving to a label-based model specification mechanism soon, so that in the future you won't have to explicitly enumerate all the models you want to query up front.\n",
+    "\n",
+    "Registering the `cifar_demo` application with Clipper will have the following effect on your setup: <img src=\"img/register_app.png\" style=\"width: 500px;\"/>\n",
     "\n",
     "> *Don't worry if this command seems to take a long time. Before starting Clipper, the Docker containers must be downloaded from Docker Hub. These containers are fairly large and may take awhile to download depending on the speed of your internet connection.*"
    ]
@@ -226,7 +262,9 @@
     "http://HOSTNAME:1337/cifar_demo/update\n",
     "```\n",
     "\n",
-    "You will now start querying Clipper with a simple Python frontend app that computes the average accuracy of the responses after every 100 requests and updates a plot of the results with every iteration."
+    "You will now start querying Clipper with a simple Python frontend app that computes the average accuracy of the responses after every 100 requests and updates a plot of the results with every iteration.\n",
+    "\n",
+    "This diagram shows how how the accuracy plot is receiving its test predictions: <img src=\"img/serve_predictions.png\" style=\"width: 500px;\"/>"
    ]
   },
   {
