--- a/examples/tutorial/tutorial_part_two.ipynb
+++ b/examples/tutorial/tutorial_part_two.ipynb
@@ -33,7 +33,26 @@
     "key = \"\"\n",
     "# Set the SSH host\n",
     "host = \"\"\n",
-    "clipper = cm.Clipper(host, user, key)"
+    "clipper = cm.Clipper(host, user, key)\n",
+    "clipper.start()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make sure that `cifar_demo` is still registered with Clipper. If it isn't, go back to part one of the tutorial and re-register the app."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "clipper.list_apps()"
    ]
   },
   {
@@ -44,7 +63,7 @@
     "\n",
     "Because this is a new notebook, you must load the CIFAR dataset again. This time, you will be using it to train and evaluate machine learning models.\n",
     "\n",
-    "*Set the location to the directory where you downloaded the CIFAR dataset in part one.*"
+    "Set `cifar_loc` to the same location you did in the \"Download the Images\" section of part one of the tutorial. You will load into Python the number of training and test datapoints specified in \"Extract the images\" section of part one."
    ]
   },
   {
@@ -69,7 +88,7 @@
    "source": [
     "# Train Logistic Regression Model\n",
     "\n",
-    "When tackling a new problem with machine learning, it's always good to start with simple models and only add complexity when needed. Start by training a logistic regression binary classifier using [Scikit-Learn](http://scikit-learn.org/). This model gets about 74% accuracy on the offline evaluation dataset."
+    "When tackling a new problem with machine learning, it's always good to start with simple models and only add complexity when needed. Start by training a logistic regression binary classifier using [Scikit-Learn](http://scikit-learn.org/). This model gets about 68% accuracy on the offline evaluation dataset if you use 10000 training datapoints about 74% if you use all training datapoints."
    ]
   },
   {
@@ -94,11 +113,14 @@
    "source": [
     "# Deploy Logistic Regression Model\n",
     "\n",
-    "While 74% accuracy on a CIFAR binary classification task is significantly below state of the art, it's already much better than the 50% accuracy of random guessing that you're getting right now without machine learning.\n",
+    "While 68-74% accuracy on a CIFAR binary classification task is significantly below state of the art, it's already much better than the 50% accuracy of random guessing that you're getting right now without machine learning.\n",
     "\n",
     "You can deploy your logistic regression model directly to Clipper without having to worry about how to serialize the model or integrate it with application code.\n",
     "\n",
     "To deploy a model to Clipper, you must assign it a name (\"sklearn_cifar\"), a version (1), and then provide some metadata about the model itself. In this case, you are specifying that you want to run the model using the `sklearn_cifar_container` Docker image in the [Clipper repo](https://hub.docker.com/u/clipper/dashboard/) on Docker Hub. You can assign the model descriptive labels, and specify the input type that this model expects. Finally, you can specify how many *replicas* of the model (how many Docker containers) to launch. Adding more replicas increases the throughput of this model.\n",
+    "\n",
+    "After completing this step, Clipper will be managing a container in Docker with your model in it:\n",
+    "<img src=\"img/deploy_sklearn_model.png\" alt=\"Drawing\" style=\"width: 500px;\"/>\n",
     "\n",
     "> *Once again, because you are deploying a Docker image this command may take awhile to download the image. Thanks for being patient!*"
    ]
@@ -127,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that you've deployed your model, go ahead and check back on your running frontend application from part 1. You should see the accuracy rise from around 50% to around 74%, without having to stop or modify your application at all!"
+    "Now that you've deployed your model, go ahead and check back on your running frontend application from part 1. You should see the accuracy rise from around 50% to the accuracy of your SKLearn model (68-74%), without having to stop or modify your application at all!"
    ]
   },
   {
@@ -176,7 +198,10 @@
    "source": [
     "# Deploy TensorFlow Model\n",
     "\n",
-    "Similar to deploying the logistic regression model, you can now deploy your TensorFlow neural network. Note that you will specify a different model container to use this time: the `tf_cifar_container`.\n",
+    "Similar to deploying the logistic regression model, you can now deploy your TensorFlow neural network. Note that you will specify a different model container to use this time: the `tf_cifar_container`. In this case, you are providing Clipper a serialized version of the model. The container has been set up to reconstruct the original model from the serialized representation.\n",
+    "\n",
+    "After completing this step, Clipper will be managing two containers: one for each of your models.\n",
+    "<img src=\"img/deploy_tf_model.png\" alt=\"Drawing\" style=\"width: 600px;\"/>\n",
     "\n",
     "> *Once again, please patient while the Docker image is downloaded.*"
    ]
@@ -209,6 +234,9 @@
     "\n",
     "When you register an application with multiple candidate models, the selection policy dictates which of those models to query, and if more than one model is queried, how to combine the results. Selection policies can be used to implement ensembles, to perform dynamic online model selection using multi-armed bandit algorithms (a more statistically efficient alternative to A/B testing), to estimate prediction confidence, and many other applications. Selection policies can learn from feedback and be updated in real-time directly in the serving system. For more information about selection policies in Clipper, check out the [research paper on Arxiv](https://arxiv.org/abs/1612.03079).\n",
     "\n",
+    "This diagram illustrates how the selection policy affects prediction serving with your current setup:\n",
+    "<img src=\"img/selection_policy.png\" alt=\"Drawing\" style=\"width: 700px;\"/>\n",
+    "\n",
     "When you created the `cifar_demo` application, you registered it to use the EXP4 selection policy. This selection policy always uses all of the candidate models, and will average the predictions together. When provided with feedback, EXP4 will learn a weighted average that gives more weight to models that are correct more often.\n",
     "\n",
     "You have note provided Clipper with any feedback yet, so EXP4 gives your two models equal weight.\n",
@@ -232,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you check out the accuracy of your frontend application again in the notebook from part 1, you'll see that it should be around 80% accuracy, about halfway between 74% and 88% accuracy."
+    "If you check out the accuracy of your frontend application again in the notebook from part 1, you'll see that it should be around 78-80% accuracy, about halfway between the accuracies of your SKLearn (68-74%) and TensorFlow (88%) accuracy models."
    ]
   },
   {
@@ -310,15 +338,6 @@
     "\n",
     "*Head back to the notebook from part 1. When you're done watching the accuracy of your application, stop the cell (hit the little \"stop\" square in the notebook toolbar).*"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
