Minor changes for clarity

--- a/examples/noop_test/noop_testcase.ipynb
+++ b/examples/noop_test/noop_testcase.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I think I'm running into a problem where prediction requests aren't getting routed to modelcontainers. This code can hopefully replicate that."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -26,6 +33,7 @@
     "import os\n",
     "sys.path.append(os.path.abspath('../../management/'))\n",
     "import clipper_manager\n",
+    "reload(clipper_manager)\n",
     "# Change the username if necessary\n",
     "user = \"\"\n",
     "# Set the path to the SSH key\n",
@@ -85,7 +93,9 @@
    },
    "outputs": [],
    "source": [
-    "path = \"/some/random/directory\"\n",
+    "path = \"some/path/to/an/empty/directory\"\n",
+    "\n",
+    "# This step may take some time in downloading the container image\n",
     "model_added = clipper.deploy_model(\n",
     "    \"my_noop_model\",\n",
     "    1,\n",
@@ -151,8 +161,34 @@
    "outputs": [],
    "source": [
     "test_datapoint = np.asarray([1,2,3,4,5,6])\n",
-    "get_prediction(host, app_name, test_datapoint) "
+    "clipper_prediction = get_prediction(host, app_name, test_datapoint)\n",
+    "what_noop_would_have_returned = np.sum(test_datapoint)\n",
+    "print(\"Clipper's prediction: {cpred}, what the noop `predict_ints` would have returned: {npred}\"\\\n",
+    "      .format(cpred=clipper_prediction, npred=what_noop_would_have_returned))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check logs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run `docker ps`, find the running instance of nishadsingh/noop_container, grab its container id and run `docker logs <container_id>`. If the Noop container's `predict_ints` (or any other `predict_<type>` for that matter) function was used, you'll see output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
